initialSetup/main/default/objects/Enrolled_Site__c/Enrolled_Site__c.object-meta.xml
<CustomObject>
    <label>Enrolled Site</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Enrolled Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolled Site</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>