initialSetup/main/default/objects/Enrolled_Site__c/fields/CRO_Agent_LLM_Response__c.field-meta.xml
<CustomField>
    <fullName>CRO_Agent_LLM_Response__c</fullName>
    <label>CRO Agent LLM Response</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>