initialSetup/main/default/objects/Enrolled_Site__c/fields/CRO_Research_Study__c.field-meta.xml
<CustomField>
    <fullName>CRO_Research_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRO Research Study</label>
    <referenceTo>CRO_Research_Study__c</referenceTo>
    <relationshipLabel>Enrolled Site</relationshipLabel>
    <relationshipName>Enrolled_Site</relationshipName>
    <type>Lookup</type>
</CustomField>