initialSetup/main/default/objects/Enrolled_Site__c/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Enrolled Site</relationshipLabel>
    <relationshipName>Enrolled_Site</relationshipName>
    <type>Lookup</type>
</CustomField>