initialSetup/main/default/objects/Enrolled_Site__c/fields/LLM_Response__c.field-meta.xml
<CustomField>
    <fullName>LLM_Response__c</fullName>
    <label>LLM Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>