initialSetup/main/default/objects/Enrolled_Site__c/fields/Preliminary_Check__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>if checked - site agent will call for initial round checking, unchecked - means calling to pcp agent for second round checking</description>
    <label>Preliminary Check</label>
    <type>Checkbox</type>
</CustomField>