initialSetup/main/default/objects/Enrolled_Site__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Invited for Survey</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Recruitment Ongoing</fullName>
            </value>
            <value>
                <fullName>Recruitment Closed</fullName>
            </value>
            <value>
                <fullName>Trial Upcoming</fullName>
            </value>
            <value>
                <fullName>Trial Ongoing</fullName>
            </value>
            <value>
                <fullName>Trial Completed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>